--- a/src/main/resources/templates/member/infoForm.html
+++ b/src/main/resources/templates/member/infoForm.html
@@ -13,18 +13,19 @@
     <title>회원 수정</title>
     <style>
 
-        #container {
-            padding: 30px;
+        #header {
+            text-indent: 1em;
+            font-size: 1.7em;
         }
 
-        h2 {
-            text-align: center;
-            margin: 0 auto;
+        #myPageNav {
+            margin: 20px auto ;
+            background-color: #f7f7f7;
         }
 
-        form {
+        .info-form {
             width: 560px;
-            margin: 0 auto;
+            margin: 20px auto;
         }
 
         .input-wrapper > * {
@@ -49,7 +50,7 @@
             margin-left: 5px;
         }
 
-        #submitBt {
+        .submit-btn {
             margin: 0 auto;
         }
     </style>
@@ -57,18 +58,29 @@
     <script>
         $(document).ready(function () {
 
-            // 모든 폼의 input, button 비활성화 및 editBt 활성화
-            $(".form input").attr("disabled", true);
-            $(".form button").css("display", "none")
-            $(".form .editBt").css("display", "block");
+            // 내부 네비바 active
+            $(".nav-pills .nav-link").on({
+                mouseenter: function () {
+                    $(this).addClass("active");
+                },
+                mouseleave: function () {
+                    $(this).removeClass("active");
+                }
+            });
+
+            // 모든 info-form 폼의 input, button 비활성화 및 editBt 활성화
+            $(".info-form input").attr("disabled", true);
+            $(".info-form button").css("display", "none")
+            $(".info-form .edit-btn").css("display", "block");
             $("#password").attr("placeholder", "");
 
             // 회원 정보 수정 버튼 누름
-            $(".editBt").on("click", function () {
-                $(".form .editable").attr("disabled", false);
-                $(".form button").css("display", "block");
-                $(".form .editBt").css("display", "none");
+            $(".edit-btn").on("click", function () {
+                $(".info-form .editable").attr("disabled", false);
+                $(".info-form button").css("display", "block");
+                $(".info-form .edit-btn").css("display", "none");
                 $("#password").attr("placeholder", "4 ~ 16자리까지 허용합니다.");
+
             })
 
             let loginIdFlag = true;
@@ -145,7 +157,7 @@
             })
 
             // 일반 유저 폼 submit
-            $("#form").on("submit", function (event) {
+            $("#normalForm").on("submit", function (event) {
                 event.preventDefault();
 
                 console.log("$(loginId) " + $("#loginId").val() + " loginId " + loginId)
@@ -167,6 +179,7 @@
                 if (loginIdFlag == true && usernameFlag == true) {
                     this.submit();
                 } else {
+                    (loginIdFlag == true) ? $("#username").removeClass("is-valid") : $("#loginId").removeClass("is-valid");
                     alert((loginIdFlag ? "닉네임 " : "로그인ID ") + "중복 체크 해주세요");
                 }
             })
@@ -181,8 +194,10 @@
                 if ($("#oauth2Username").val() != username) usernameFlag = false;
 
                 if (usernameFlag == true) {
+                    $("#oAuth2ProviderId").attr("disabled", false);
                     this.submit();
                 } else {
+                    $("#oauth2Username").removeClass("is-valid");
                     alert("닉네임 중복 체크 해주세요");
                 }
             })
@@ -195,13 +210,29 @@
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
 
-    <h2 th:if="${isOauth2 != 'true'}"> 회원 정보 </h2>
-    <h2 th:if="${isOauth2 == 'true'}"> 소셜 회원 정보 </h2>
+    <h2 id="header"> 마이 페이지 > 내 정보 </h2>
+    <hr>
+
+    <ul  id="myPageNav" class="nav nav-pills nav-justified">
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/member/mypage/myboard">내 게시글</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/member/mypage/mycomment" >내 댓글</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/member/mypage/info" >내 정보</a>
+        </li>
+    </ul>
+
+
+    <div id="userInfo">
 
     <!-- 로그인ID 와 닉네임은 중복체크를 위해 클라이언트 단에서 유효성 검사를 하긴 함
           -> 새로고침 날아감 때문에 패스워드도 그냥 유효성 검사 함 -->
     <form th:if="${isOauth2 != 'true'}"
-          th:action="@{/member/edit}" action="/home" method="POST" th:object="${member}" id="form" class="form">
+          th:action="@{/member/edit}" action="/home" method="POST"
+          th:object="${member}" id="normalForm" class="info-form form">
 
         <label for="loginId" class="col">로그인 ID </label>
         <div class="input-wrapper">
@@ -241,8 +272,8 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <button id="editBt" type="button" class="btn btn-primary editBt">정보 수정</button>
-            <button id="submitBt" type="submit" class="btn btn-primary"> 회원 수정</button>
+            <button id="editBt" type="button" class="btn btn-primary edit-btn">정보 수정</button>
+            <button id="submitBt" type="submit" class="btn btn-primary submit-btn"> 회원 수정</button>
         </div>
 
         <!-- Oauth2 유저인지 확인-->
@@ -252,7 +283,8 @@
 
 
     <form th:if="${isOauth2 == 'true'}"
-          th:action="@{/member/edit/oauth2}" action="/home" method="POST" th:object="${member}" id="oauth2Form" class="form">
+          th:action="@{/member/edit/oauth2}" action="/home" method="POST"
+          th:object="${member}" id="oauth2Form" class="info-form form">
 
         <label for="oAuth2Provider">사용중인 소셜 로그인 서비스 </label>
         <div class="input-wrapper">
@@ -280,15 +312,21 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <button id="oauth2EditBt" type="button" class="btn btn-primary editBt">정보 수정</button>
-            <button id="oauth2SubmitBt" type="submit" class="btn btn-primary"> 수정 완료</button>
+            <button id="oauth2EditBt" type="button" class="btn btn-primary edit-btn">정보 수정</button>
+            <button id="oauth2SubmitBt" type="submit" class="btn btn-primary submit-btn"> 수정 완료</button>
         </div>
 
         <!-- Oauth2 유저인지 확인-->
         <input class="isOauth2" type="hidden" name="isOauth2" th:value="${isOauth2}">
-        <input type="hidden" name="providerId" th:value="${member.getProviderId()}">
+        <input  id="oAuth2ProviderId" type="hidden" name="providerId" th:value="${member.getProviderId()}">
 
     </form>
+    </div>
+
+    <!------------------------------------------------------------------------------->
+
+
+
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
